Fix heading underline on mobile

--- a/assets/css/blog/item.css
+++ b/assets/css/blog/item.css
@@ -64,6 +64,13 @@
   }
 }
 
-body.page.posts .page--content > * {
-  text-align: left;
+body.page.posts .page--content {
+  & > * {
+    text-align: left;
+  }
+
+  & > :--heading::after {
+    left: 0;
+    transform: none;
+  }
 }
